--- a/index.html
+++ b/index.html
@@ -429,20 +429,20 @@ li a:hover:not(.active) {
                                 <div class="item">
                                     <img src="C:\xampp\htdocs\porta yail\images\studies/Titulo de ingeniero en sistemas computacional.jpg" alt="Logo Entel" style="width: 150px; ">
                                     <div style="text-align: center;"><central>INGENIERIA EN SISTEMAS COMPUTACIONAL
-                                    <div style="text-align: center;"><central><h3><a href="C:\xampp\htdocs\porta yail\images\studies/Titulo de ingeniero en sistemas computacional.pdf" target="_blank">Descargar estudio universitario</h3></a>
+                                    <div style="text-align: center;"><central><h3><a href="images\studies/Titulo de ingeniero en sistemas computacional.pdf" target="_blank">Descargar estudio universitario</h3></a>
                                     </div>
                                 </div>
                                 <div class="">
                                     <div class="item">
-                                        <img src="C:\xampp\htdocs\porta yail\images\studies/Titulo de licenciatura en informatica.png" alt="Logo Entel" style="width: 150px; ">
+                                        <img src="images\studies/Titulo de licenciatura en informatica.png" alt="Logo Entel" style="width: 150px; ">
                                         <div style="text-align: center;"><central>LICENCIADO EN INFORMATICA
-                                        <div style="text-align: center;"><central><h3><a href="C:\xampp\htdocs\porta yail\images\studies/Titulo de licenciatura en informatica.pdf" target="_blank">Descargar estudio universitario</h3></a>
+                                        <div style="text-align: center;"><central><h3><a href="images\studies/Titulo de licenciatura en informatica.pdf" target="_blank">Descargar estudio universitario</h3></a>
                                         </div>
                                     </div>
                                     <div class="">
                                         <div class="item">
                                             <div style="text-align: center;"><central>UNIFICACION DE CERTIFICADOS DE LOS CURSOS REALIZADOS
-                                            <div style="text-align: center;"><central><h2><a href="C:\xampp\htdocs\porta yail\images\studies/UNIFICACION DE CERTIFICADOS DE LOS CURSOS REALIZADOS.pdf" target="_blank">Descargar certificados de cursos tecnico</h2></a>
+                                            <div style="text-align: center;"><central><h2><a href="images\studies/UNIFICACION DE CERTIFICADOS DE LOS CURSOS REALIZADOS.pdf" target="_blank">Descargar certificados de cursos tecnico</h2></a>
                                             </div>
                                 </div>
                             </div>
