--- a/index.html
+++ b/index.html
@@ -427,7 +427,7 @@ li a:hover:not(.active) {
                     </div>
                     <div class="">
                                 <div class="item">
-                                    <img src="C:\xampp\htdocs\porta yail\images\studies/Titulo de ingeniero en sistemas computacional.jpg" alt="Logo Entel" style="width: 150px; ">
+                                    <img src="images\studies/Titulo de ingeniero en sistemas computacional.jpg" alt="Logo Entel" style="width: 150px; ">
                                     <div style="text-align: center;"><central>INGENIERIA EN SISTEMAS COMPUTACIONAL
                                     <div style="text-align: center;"><central><h3><a href="images\studies/Titulo de ingeniero en sistemas computacional.pdf" target="_blank">Descargar estudio universitario</h3></a>
                                     </div>
