--- a/index.html
+++ b/index.html
@@ -522,7 +522,7 @@ li a:hover:not(.active) {
                 <!-- Row -->
                 <div class="row">
 
-                    <!-- Section header -->
+                    <!-- Section header --
                     <div class="section-header text-center">
                         <h2 class="title">Certificaciones</h2>
                     </div>
@@ -530,7 +530,7 @@ li a:hover:not(.active) {
 
 
                         <div id="carousel-example-generic-certi" class="carousel slide" data-ride="carousel">
-                            <!-- Indicators -->
+                            <!-- Indicators --
                             <ol class="carousel-indicators">
                                 <li data-target="#carousel-example-generic-certi" data-slide-to="0" class="active"></li>
                                 <li data-target="#carousel-example-generic-certi" data-slide-to="1" class=""></li>
@@ -538,7 +538,7 @@ li a:hover:not(.active) {
                                 <li data-target="#carousel-example-generic-certi" data-slide-to="3" class=""></li>
                             </ol>
 
-                            <!-- Wrapper for slides -->
+                            <!-- Wrapper for slides --
                             <div class="carousel-inner" role="listbox">
                                 <div class="item active">
                                     <img src="assets/images/certified/SFPC.jpg" alt="Certificado Scrum" class="img-responsive">
@@ -566,7 +566,7 @@ li a:hover:not(.active) {
                                 </div>
                             </div>
 
-                            <!-- Controls -->
+                            <!-- Controls --
                             <a class="left carousel-control" href="#carousel-example-generic-certi" role="button" data-slide="prev">
                                 <span class="fa fa-chevron-left" aria-hidden="true"></span>
                                 <span class="sr-only">Previous</span>
@@ -589,18 +589,18 @@ li a:hover:not(.active) {
 
                     </div>
                 </div>
-                <!-- Row -->
+                <!-- Row --
             </div>
-            <!-- /Container -->
+            <!-- /Container --
         </div>
         <!-- certified -->
-        <!-- experience -->
+        <!-- experience --
         <div id="experience" class="section md-padding">
 
-            <!-- Container -->
+            <!-- Container --
             <div class="container">
 
-                <!-- Row -->
+                <!-- Row --
                 <div class="row">
 
                     <!-- Section header -->
