--- a/index.html
+++ b/index.html
@@ -463,7 +463,7 @@ li a:hover:not(.active) {
                 </div>
 
             </ul>
-            <br>
+            <br><br><br><br><br>
                             <ol>
                                 <h3>FUNDACION CARLOS SLIM</h3>
 
@@ -522,7 +522,7 @@ li a:hover:not(.active) {
                 <!-- Row -->
                 <div class="row">
 
-                    <!-- Section header --
+                    <!-- Section header -->
                     <div class="section-header text-center">
                         <h2 class="title">Certificaciones</h2>
                     </div>
@@ -566,7 +566,7 @@ li a:hover:not(.active) {
                                 </div>
                             </div>
 
-                            <!-- Controls --
+                            <!-- Controls -->
                             <a class="left carousel-control" href="#carousel-example-generic-certi" role="button" data-slide="prev">
                                 <span class="fa fa-chevron-left" aria-hidden="true"></span>
                                 <span class="sr-only">Previous</span>
@@ -589,18 +589,18 @@ li a:hover:not(.active) {
 
                     </div>
                 </div>
-                <!-- Row --
+                <!-- Row -->
             </div>
-            <!-- /Container --
+            <!-- /Container -->
         </div>
         <!-- certified -->
-        <!-- experience --
+        <!-- experience -->
         <div id="experience" class="section md-padding">
 
-            <!-- Container --
+            <!-- Container -->
             <div class="container">
 
-                <!-- Row --
+                <!-- Row -->
                 <div class="row">
 
                     <!-- Section header -->
